# tlwywgt

./: Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pipeline.yml
app/: __main__.py
app/endpoints/: health.py  idea.py  ideas.py  images.py
app/models/: commons.py  health_models.py  idea_models.py
sql_app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
