[tool.poetry]
name = "tlwywgt"
version = "0.1.0"
description = ""
authors = ["LouisWirtz <65605369+LouisWirtz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
pydentic = "^0.0.1-alpha.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.940"
pydocstyle = "^6.1.1"
wemake-python-styleguide = "^0.16.0"
flake8-bandit = "2.1.2"
bandit = "1.7.2"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
